# RealtimeSTT

./: CMakeLists.txt  README.md  RELEASING.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
RealtimeSTT/: audio_recorder.py  audio_recorder_client.py  whisper_cpp_native.py
RealtimeSTT/asr/: __init__.py  factory.py  interfaces.py  model_resolver.py  whisper_cpp_coreml.py
RealtimeSTT/asr/backends/: faster_whisper_backend.py  whisper_cpp_backend.py
RealtimeSTT/asr/resources/: __init__.py
RealtimeSTT/asr/resources/whisper_cpp/: __init__.py  convert_whisper_to_coreml.py
RealtimeSTT_server/: README.md  stt_server.py
native/whisper_cpp/: pybind_module.cpp
scripts/: generate_whisper_cpp_coreml.sh
tests/: README.md  benchmark_asr.py
tests/unit/: test_audio_recorder_contract.py  test_whisper_cpp_support.py
