[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[project]
name = "realtimestt-xyz"
version = "0.3.104.post5"
description = "A fast Voice Activity Detection and Transcription System"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Kolja Beigel", email = "kolja.beigel@web.de" },
  { name = "Barak XYZ Fork Maintainers" },
]
dependencies = [
  "PyAudio==0.2.14",
  "faster-whisper==1.1.1",
  "pvporcupine==1.9.5",
  "webrtcvad-wheels==2.0.14",
  "halo==0.0.31",
  "torch",
  "torchaudio",
  "scipy==1.15.2",
  "openwakeword>=0.4.0",
  "websockets==15.0.1",
  "websocket-client==1.8.0",
  "soundfile==0.13.1",
  "numpy>=1.26,<3",
]
keywords = [
  "real-time",
  "audio",
  "transcription",
  "speech-to-text",
  "voice-activity-detection",
]

[project.urls]
Homepage = "https://github.com/BarakXYZ/RealtimeSTT"
Repository = "https://github.com/BarakXYZ/RealtimeSTT"
Issues = "https://github.com/BarakXYZ/RealtimeSTT/issues"
Changelog = "https://github.com/BarakXYZ/RealtimeSTT/releases"

[project.scripts]
stt-server = "RealtimeSTT_server.stt_server:main"
stt = "RealtimeSTT_server.stt_cli_client:main"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["RealtimeSTT", "RealtimeSTT_server"]
sdist.include = [
  "RealtimeSTT/warmup_audio.wav",
  ".gitmodules",
  "third_party/whisper.cpp",
]
sdist.exclude = [
  "third_party/whisper.cpp/.git",
  "third_party/whisper.cpp/.github",
  "third_party/whisper.cpp/.devops",
  "third_party/whisper.cpp/examples",
  "third_party/whisper.cpp/models",
  "third_party/whisper.cpp/tests",
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "pp* *-musllinux*"
